--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "marqetaapi",
   "version": "1.0.0",
   "description": "An Exploration of the Marqeta Developers' API",
-  "main": "index.js",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,11 @@
   "homepage": "https://github.com/andyderek/marqetaAPI#readme",
   "dependencies": {
     "express": "^4.16.4",
+    "lodash": "^4.17.11",
     "node": "^11.12.0"
+  },
+  "devDependencies": {
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.3.0"
   }
 }
