--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   },
   "homepage": "https://github.com/andyderek/marqetaAPI#readme",
   "dependencies": {
+    "axios": "^0.18.0",
     "express": "^4.16.4",
     "lodash": "^4.17.11",
-    "node": "^11.12.0"
+    "node": "^11.12.0",
+    "react-transition-group": "^1.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.4.0",
